# discordbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  application.yml  compose.yaml
.github/workflows/: rust.yml
src/: commands.rs  config.rs  error.rs  events.rs  format.rs  general.rs  main.rs
src/music/: clear.rs  format.rs  info.rs  lavalink.rs  leave.rs  mod.rs  play.rs  queue.rs  skip.rs  stop.rs
