[package]
name = "DiscordBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logger
env_logger = "0.11.6"
log = "0.4.26"
# Error Handling crates
thiserror = "2.0.11"
# tokio for asynchronisation
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "rt"] }

# Discord specific crates
serenity = { version = "0.12.4", features = ["framework"] }
lavalink-rs = { version = "0.14", features = ["songbird", "serenity" ], default-features = true}
poise = { version = "0.6.1", features = ["cache", "chrono", "handle_panics"], default-features = false }
songbird = { version = "0.4.3", features = ["gateway", "serenity", "native"], default-features = false }
# needed for lavalink events
futures = "0.3.31"


[target.'cfg(target_os = "unix")'.dependencies]
# Load openssl crate to use reqwest with ssl. Needed for docker environment
openssl = { version = "0.10", features = ["vendored"] }